Fixed typo in ".dockerignore"

--- a/.gitignore
+++ b/.gitignore
@@ -26,15 +26,15 @@ app/views/shared/_debugging.erb
 .DS_Store
 doc
 Dockerfile
-Passengerfile.json
 docker-compose.yml
+.dockerignore
 entrypoint.sh
+Passengerfile.json
+passenger.*
 .env.db
 .env.web
 sources.list
-.dockerigore
 public/assets/
-passenger.*
 config/settings/*.yml
 app/assets/images/*_logo.png
 public/icons/*
