--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -5,7 +5,7 @@
 # Create data volumes like this:
 # docker run -v /var/lib/postgresql --name pgdata postgres:9.6.5 echo 'Postgres data'
 # docker run -v /usr/local/rvm/gems -v /home/app/workshops/vendor/cache \
-#    --name rubygems "phusion/passenger-ruby25:1.0.0" echo 'Ruby gems'
+#    --name rubygems "phusion/passenger-ruby26:latest" echo 'Ruby gems'
 #
 # Generate secure strings for the keys, passwords and tokens using:
 # < /dev/urandom LC_CTYPE=C tr -dc _A-Z-a-z-0-9 | head -c${1:-64};echo
