--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@rails/webpacker": "^5.1.1",
     "stimulus": "^1.1.1",
-    "vali-admin": "^3.0.0"
+    "vali-admin": "^3.0.0",
+    "minimist": "^1.2.5"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
