--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,14 @@ public/packs/
 yarn-error.log
 
 /public/packs
+public/packs
 /public/packs-test
+public/packs-test
 /node_modules
+node_modules
+node_modules/
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+bin/webpack
+bin/webpack-dev-server
