--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lodash": "^4.17.19",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
+    "serialize-javascript": "^3.1.0",
+    "ssri": "^8.0.1",
     "stimulus": "^1.1.1",
     "vali-admin": "^3.0.0",
-    "websocket-extensions": "^0.1.4",
-    "serialize-javascript": "^3.1.0",
-    "ssri": "^8.0.1"
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
@@ -22,6 +22,7 @@
   "resolutions": {
     "**/kind-of": "^6.0.3",
     "chokidar": "^3.4.0",
-    "ssri": "^8.0.1"
+    "ssri": "^8.0.1",
+    "serialize-javascript": "^3.1.0"
   }
 }
