--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ssri": "^8.0.1",
     "stimulus": "^1.1.1",
     "vali-admin": "^3.0.0",
-    "websocket-extensions": "^0.1.4"
+    "websocket-extensions": "^0.1.4",
+    "trim-newlines@^3.0.1"
   },
   "devDependencies": {
     "webpack": "^4.43.0",
@@ -24,6 +25,7 @@
     "chokidar": "^3.4.0",
     "ssri": "^8.0.1",
     "serialize-javascript": "^3.1.0",
-    "is-svg": "^4.2.2"
+    "is-svg": "^4.2.2",
+    "trim-newlines": "^3.0.1"
   }
 }
