--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "license": "SEE LICENSE IN GNU-AGPL-3.0",
   "dependencies": {
     "@rails/webpacker": "5.1.1",
+    "ansi-regex": "^5.0.1",
     "chokidar": "^3.4.0",
     "kind-of": "^6.0.3",
     "lodash": "^4.17.19",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
+    "nth-check": "^2.0.1",
     "serialize-javascript": "^3.1.0",
+    "set-value": "^4.0.1",
     "ssri": "^8.0.1",
     "stimulus": "^1.1.1",
+    "tar": "^4.4.18",
     "trim-newlines": "3.0.1",
     "vali-admin": "^3.0.0",
     "websocket-extensions": "^0.1.4"
@@ -22,10 +26,14 @@
   },
   "resolutions": {
     "**/kind-of": "^6.0.3",
+    "ansi-regex": "^5.0.1",
     "chokidar": "^3.4.0",
+    "nth-check": "^2.0.1",
     "ssri": "^8.0.1",
     "serialize-javascript": "^3.1.0",
+    "set-value": "^4.0.1",
     "is-svg": "^4.2.2",
+    "tar": "^4.4.18",
     "trim-newlines": "^3.0.1"
   }
 }
