npm package security update

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/webpacker": "5.4.3",
     "ansi-regex": "^5.0.1",
     "chokidar": "^3.4.0",
+    "json-schema": "^0.4.0",
     "kind-of": "^6.0.3",
     "lodash": "^4.17.19",
     "minimist": "^1.2.5",
@@ -30,6 +31,7 @@
     "**/kind-of": "^6.0.3",
     "ansi-regex": "^5.0.1",
     "chokidar": "^3.4.0",
+    "json-schema": "^0.4.0",
     "nth-check": "^2.0.1",
     "ssri": "^8.0.1",
     "serialize-javascript": "^3.1.0",
